--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
   <head>
     <script src="js/jquery-3.4.1.js" charset="utf-8"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>Beep Boop</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="">
+        <form id="inputForm" class="form-group" action="index.html" method="post">
+          <label for="">Please Enter a Number:</label>
+          <input type="text" name="" id="numberInput" value="">
+          <button type="button" name="button">Process</button>
+        </form>
+      </div>
+      <div class="">
+        <p id="textOutput"></p>
+      </div>
+    </div>
   </body>
 </html>
