attempting to debug js

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="">
         <form id="inputForm" class="form-group" action="index.html" method="post">
           <label for="">Please Enter a Number:</label>
-          <input type="text" name="" id="numberInput" value="">
-          <button type="button" name="button">Process</button>
+          <input type="number" name="" id="numberInput" value="">
+          <button type="submit" name="button">Process</button>
         </form>
       </div>
       <div class="">
