--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title>Beep Boop</title>
   </head>
   <body>
-    <div class="container">
-      <div class="">
+    <h1 class="jumbotron">computer talk</h1>
+    <div class="">
+
+      <div class="container">
         <form id="inputForm" class="form-group" action="index.html" method="post">
           <label for="">Please Enter a Number:</label>
           <input type="number" name="" id="numberInput" value="">
